# advent-of-code

./: LICENSE
2022/rust/: Cargo.toml  bacon.toml
2022/rust/day-01-calorie-counting/: Cargo.toml
2022/rust/day-01-calorie-counting/src/: main.rs  part1.rs  part2.rs
2022/rust/day-02-rock-paper-scissors/: Cargo.toml
2022/rust/day-02-rock-paper-scissors/src/: main.rs  part1.rs  part2.rs
2025/rust/: Cargo.toml  justfile
2025/rust/day-01-secret-entrance/: Cargo.toml
2025/rust/day-01-secret-entrance/src/: lib.rs  main.rs  part1.rs  part2.rs
2025/rust/day-02-gift-shop/: Cargo.toml
2025/rust/day-02-gift-shop/src/: lib.rs  part1.rs  part2.rs
2025/rust/day-03-lobby/: Cargo.toml
2025/rust/day-03-lobby/src/: lib.rs  main.rs  part1.rs  part2.rs
2025/rust/day-04-printing-department/: Cargo.toml
2025/rust/day-04-printing-department/src/: lib.rs  main.rs  part1.rs  part2.rs
2025/rust/day-05-cafeteria/: Cargo.toml
2025/rust/day-05-cafeteria/src/: lib.rs  part1.rs  part2.rs
2025/rust/day-06-trash-compactor/: Cargo.toml
2025/rust/day-06-trash-compactor/src/: part1.rs
2025/rust/template/: Cargo.toml
rust-template/: Cargo.toml
rust-template/src/: part1.rs  part2.rs
