[workspace]
members = [
    "day-01-calorie-counting",
    "day-02-rock-paper-scissors",
]
resolver = "3"

[workspace.dependencies]
color-eyre = "0.6.5"
itertools = "0.14.0"
rstest = "0.26.1"

[workspace.lints.clippy.all]
level = "deny"
priority = 1

[workspace.lints.clippy.nursery]
level = "allow"
priority = -1

[workspace.lints.clippy.pedantic]
level = "allow"
priority = -1

[workspace.lints.clippy.restriction]
level = "allow"
priority = -1

[workspace.lints.rust.unsafe_code]
level = "forbid"
priority = 5

[workspace.lints.rust.unused]
level = "allow"
priority = 1
