[workspace]
members = []
resolver = "3"

[workspace.lints.clippy.all]
level = "deny"
priority = 1

[workspace.lints.clippy.nursery]
level = "allow"
priority = -1

[workspace.lints.clippy.pedantic]
level = "allow"
priority = -1

[workspace.lints.clippy.restriction]
level = "allow"
priority = -1

[workspace.lints.rust.unsafe_code]
level = "forbid"
priority = 5

[workspace.lints.rust.unused]
level = "allow"
priority = 1
