[workspace]
members = ["day-01-secret-entrance", "day-02-gift-shop"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.100"
rstest = "0.26.1"

[workspace.lints.clippy.all]
level = "deny"
priority = 1

[workspace.lints.clippy.nursery]
level = "allow"
priority = -1

[workspace.lints.clippy.pedantic]
level = "warn"
priority = -1

[workspace.lints.clippy.restriction]
level = "allow"
priority = -1

[workspace.lints.rust.unsafe_code]
level = "forbid"
priority = 5

[workspace.lints.rust.unused]
level = "allow"
priority = 1
